removed unnecessary whitespace, fixed download button alignment

--- a/src/views/modals/ModalTransactionExport/ModalTransactionExport.less
+++ b/src/views/modals/ModalTransactionExport/ModalTransactionExport.less
@@ -16,11 +16,6 @@
 @import '../../resources/css/variables.less';
 
 .body {
-    width: 100%;
-    display: grid;
-    grid-template-rows: 1.4rem 2rem 1rem;
-    grid-template-columns: 100%;
-
     .explain {
         padding: 0.2rem;
         padding-left: 0.4rem;
@@ -42,13 +37,17 @@
         height: 2rem;
         margin: auto;
     }
+}
 
-    .download-button {
-        margin: auto;
-        padding: 0.1rem 0.2rem;
-        border-radius: 0.04rem;
-        span {
-            vertical-align: text-bottom;
-        }
+.download-button {
+    padding: 0.05rem 0.2rem;
+    display: flex;
+    align-items: center;
+    span {
+        margin-left: 0.05rem;
     }
+}
+
+.modal-footer {
+    margin: auto;
 }
